--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      window.API_URI = "REPLACE_API_URI";
+
+      // Default API if not defined - Primarily used for development
+      if (window.API_URI.includes("API_URI")) {
+        window.API_URI = "http://localhost:8080";
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
